Fixes layout problem, changes link color

--- a/docroot/sites/all/themes/ilr_theme/scss/components/_certificate_programs.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_certificate_programs.scss
@@ -281,7 +281,7 @@ body.node-type-certificate-programs {
       @include adjust-leading-to(.9);
       a {
         font-family: $font;
-        color: $violet-pos01;
+        color: $student-portrait-color;
         &:hover {
           color: #d76b00;
         }
